--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/pybind11"]
 	path = submodules/pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "submodules/libtorch"]
+	path = submodules/libtorch
+	url = https://github.com/pytorch/pytorch.git
