--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,5 @@ FetchContent_MakeAvailable(libtorch)
 set(Torch_DIR "${libtorch_SOURCE_DIR}/share/cmake/Torch")
 find_package(Torch REQUIRED)
 
-
 target_link_libraries(cbackend PRIVATE pybind11::module)
+pybind11_add_module(operators csrc/operators.cpp)
